--- a/backend/package.json
+++ b/backend/package.json
@@ -1,27 +1,33 @@
 {
-  "name": "bus-booking-backend",
+  "name": "bus-app-backend",
   "version": "1.0.0",
-  "description": "Bus Booking App Backend Server with Express and Redis",
+  "description": "Bus Booking Application Backend - Thika Superhighway",
   "main": "server.js",
-  "type": "module",
-  "author": "Your Name",
-  "license": "MIT",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
+  "keywords": [
+    "bus",
+    "booking",
+    "thika",
+    "api",
+    "redis"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "redis": "^4.6.11",
+    "express": "^4.18.2",
+    "redis": "^4.6.10",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.1"
   },
   "engines": {
-    "node": ">=14.0.0",
-    "npm": ">=6.0.0"
+    "node": "18.x",
+    "npm": "9.x"
   }
 }
